Created Debian configuration. This compiles, at least on Ubuntu Maverick, but hasn't been tested.

--- a/debian/control
+++ b/debian/control
@@ -2,11 +2,26 @@ Source: monetdb
 Section: misc
 Priority: extra
 Maintainer: MonetDB BV <info@monetdb.org>
-Build-Depends: debhelper (>= 5), autotools-dev, cdbs, bison, flex, libbz2-dev, libgeos-dev, libpcre3-dev, libperl-dev, libraptor1-dev, libreadline5-dev, libssl-dev, libssl-dev, libxml2-dev, perl, ruby, rubygems, swig, unixodbc-dev, uuid-dev, zlib1g-dev
+Homepage: http://www.monetdb.org/
+Build-Depends: debhelper (>= 5), autotools-dev, cdbs, bison, flex, libbz2-dev, libcfitsio3-dev, libcurl4-gnutls-dev, libgeos-dev, libpcre3-dev, libperl-dev, libreadline5-dev, libssl-dev, libxml2-dev, perl, python, ruby, rubygems, swig, unixodbc-dev, uuid-dev, zlib1g-dev
+# Build-Depends: libraptor1-dev
 Standards-Version: 3.8.0
 
 Package: libmonetdb1
-Conflicts: libmonetdb1
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Conflicts: libmonetdb-dev
+Description: database system for high-performance applications, libraries
+ MonetDB is a database management system that is developed from a
+ main-memory perspective with use of a fully decomposed storage model,
+ automatic index management, extensibility of data types and search
+ accelerators, SQL- and XML- frontends.
+ .
+ This package contains the core components of MonetDB in the form of a
+ single shared library.  If you want to use MonetDB, you will certainly
+ need this package, but you will also need one of the server packages.
+
+Package: libstream1
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: database system for high-performance applications, libraries
@@ -15,19 +30,44 @@ Description: database system for high-performance applications, libraries
  automatic index management, extensibility of data types and search
  accelerators, SQL- and XML- frontends.
  .
- This package contains the core components of MonetDB.  If you want to
- use MonetDB, you will certainly need this package.
+ This package contains a shared library (libstream) which is needed by
+ various other components.
 
-Package: libmonetdb-dev
+Package: libstream-dev
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libmonetdb1, zlib1g-dev, libbz2-dev, libssl-dev
-Description: database system for high-performance applications, development headers
+Depends: ${shlibs:Depends}, ${misc:Depends}, libstream1
+Description: database system for high-performance applications, libraries
  MonetDB is a database management system that is developed from a
  main-memory perspective with use of a fully decomposed storage model,
  automatic index management, extensibility of data types and search
  accelerators, SQL- and XML- frontends.
  .
- This package contains the files needed to develop with MonetDB.
+ This package contains the files to develop with the libstream1
+ library.
+
+Package: libmonetdb-client1
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Description: database system for high-performance applications, libraries
+ MonetDB is a database management system that is developed from a
+ main-memory perspective with use of a fully decomposed storage model,
+ automatic index management, extensibility of data types and search
+ accelerators, SQL- and XML- frontends.
+ .
+ This package contains a shared library (libmapi) which is needed by
+ various other components.
+
+Package: libmonetdb-client1-dev
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}, libmonetdb-client1
+Description: database system for high-performance applications, libraries
+ MonetDB is a database management system that is developed from a
+ main-memory perspective with use of a fully decomposed storage model,
+ automatic index management, extensibility of data types and search
+ accelerators, SQL- and XML- frontends.
+ .
+ This package contains the files to develop with the libmonetdb-client1
+ library.
 
 Package: monetdb-client
 Architecture: any
@@ -40,52 +80,20 @@ Description: MonetDB database client
  .
  This package contains mclient, the main client program to communicate
  with the database server, and msqldump, a program to dump the SQL
- database so that it can be loaded back later.
-
-Package: libmonetdb-client1
-Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libmonetdb1
-Description: MonetDB database client libraries
- MonetDB is a database management system that is developed from a
- main-memory perspective with use of a fully decomposed storage model,
- automatic index management, extensibility of data types and search
- accelerators, SQL- and XML- frontends.
- .
- This package contains the MonetDB client libraries.
-
-Package: libmonetdb-client-dev
-Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libmonetdb-dev, libreadline5-dev, libmonetdb-client1
-Description: MonetDB client header files
- MonetDB is a database management system that is developed from a
- main-memory perspective with use of a fully decomposed storage model,
- automatic index management, extensibility of data types and search
- accelerators, SQL- and XML- frontends.
- .
- This package contains the files needed to develop with
- MonetDB-client.
+ database so that it can be loaded back later.  If you want to use
+ MonetDB, you will very likely need this package.
 
 Package: libmonetdb-client-odbc1
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, libmonetdb1, libreadline5, libmonetdb-client1
+Conflicts: libmonetdb-client-odbc-dev
 Description: MonetDB ODBC driver
  MonetDB is a database management system that is developed from a
  main-memory perspective with use of a fully decomposed storage model,
  automatic index management, extensibility of data types and search
  accelerators, SQL- and XML- frontends.
  .
- This package contains the ODBC driver.
-
-Package: libmonetdb-client-odbc-dev
-Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libmonetdb-dev, libreadline5-dev, libmonetdb-client-dev, libmonetdb-client-odbc1
-Description: MonetDB ODBC driver (header files)
- MonetDB is a database management system that is developed from a
- main-memory perspective with use of a fully decomposed storage model,
- automatic index management, extensibility of data types and search
- accelerators, SQL- and XML- frontends.
- .
- This package contains the ODBC driver headers.
+ This package contains the MonetDB ODBC driver.
 
 Package: php5-monetdb-client
 Architecture: any
@@ -96,12 +104,14 @@ Description: MonetDB php5 client module
  automatic index management, extensibility of data types and search
  accelerators, SQL- and XML- frontends.
  .
- This package contains the PHP module for MonetDB.
+ This package contains the files needed to use MonetDB from a PHP
+ program.
 
-Package: libmonetdb-client-perl
+Package: perl-monetdb-client
 Architecture: any
 Depends: ${shlibs:Depends}, ${perl:Depends}
 Provides: ${perl:Provides}
+Conflicts: libmonetdb-client-perl
 Description: MonetDB perl client code
  MonetDB is a database management system that is developed from a
  main-memory perspective with use of a fully decomposed storage model,
@@ -113,14 +123,15 @@ Description: MonetDB perl client code
 
 Package: ruby-monetdb-client
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, ruby
+Depends: ${shlibs:Depends}, ${misc:Depends}, libruby1.8
 Description: MonetDB Ruby client module
  MonetDB is a database management system that is developed from a
  main-memory perspective with use of a fully decomposed storage model,
  automatic index management, extensibility of data types and search
  accelerators, SQL- and XML- frontends.
  .
- This package contains the Ruby module for MonetDB.
+ This package contains the files needed to use MonetDB from a Ruby
+ program.
 
 Package: monetdb-client-testing
 Architecture: any
@@ -135,34 +146,25 @@ Description: MonetDB client testing tools
  MonetDB packages.  You probably don't need this, unless you are a
  developer.
 
-Package: monetdb-geom
+Package: libmonetdb4-server-geom0
+Section: libs
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libmonetdb1
+Depends: ${shlibs:Depends}, ${misc:Depends}, monetdb4-server
+Conflicts: monetdb-geom, monetdb-geom-dev
 Description: database system for high-performance applications, xquery frontend
  MonetDB is a database management system that is developed from a
  main-memory perspective with use of a fully decomposed storage model,
  automatic index management, extensibility of data types and search
  accelerators, SQL- and XML- frontends.
  .
- This package contains the common parts of the GIS (Geographic
- Information System) extensions for MonetDB-SQL.
-
-Package: monetdb-geom-dev
-Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libmonetdb-dev, monetdb-geom, libmonetdb5-server-geom0
-# libmonetdb4-server-geom0
-Description: database system for high-performance applications, xquery frontend
- MonetDB is a database management system that is developed from a
- main-memory perspective with use of a fully decomposed storage model,
- automatic index management, extensibility of data types and search
- accelerators, SQL- and XML- frontends.
- .
- This package contains the files needed to develop with monetdb-geom.
+ This package contains the GIS (Geographic Information System)
+ extensions for monetdb4-server.
 
 Package: libmonetdb5-server-geom0
 Section: libs
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, monetdb5-server
+Conflicts: monetdb-geom, monetdb-geom-dev
 Description: database system for high-performance applications, xquery frontend
  MonetDB is a database management system that is developed from a
  main-memory perspective with use of a fully decomposed storage model,
@@ -174,7 +176,8 @@ Description: database system for high-performance applications, xquery frontend
 
 Package: monetdb4-server
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libmonetdb1, libmonetdb4-server4, libmonetdb-client1, adduser
+Depends: ${shlibs:Depends}, ${misc:Depends}, libmonetdb1, libmonetdb-client1, adduser
+Conflicts: libmonetdb4-server-dev, libmonetdb4-server4
 Description: MonetDB database server version 4
  MonetDB is a database management system that is developed from a
  main-memory perspective with use of a fully decomposed storage model,
@@ -186,34 +189,10 @@ Description: MonetDB database server version 4
  use the XQuery frontend (in which case you need monetdb4-xquery as
  well).
 
-Package: libmonetdb4-server4
-Section: libs
-Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libmonetdb1
-Description: MonetDB database server version 4 library
- MonetDB is a database management system that is developed from a
- main-memory perspective with use of a fully decomposed storage model,
- automatic index management, extensibility of data types and search
- accelerators, SQL- and XML- frontends.
- .
- This package contains the shared libraries used by the MonetDB4
- server component.
-
-Package: libmonetdb4-server-dev
-Section: libdevel
-Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libmonetdb1, libmonetdb4-server4, libmonetdb-client-dev
-Description: MonetDB database server version 4 headers
- MonetDB is a database management system that is developed from a
- main-memory perspective with use of a fully decomposed storage model,
- automatic index management, extensibility of data types and search
- accelerators, SQL- and XML- frontends.
- .
- This package contains the files needed to develop with MonetDB4.
-
 Package: monetdb5-server
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libmonetdb5-server5, adduser
+Depends: ${shlibs:Depends}, ${misc:Depends}, adduser
+Conflicts: libmonetdb5-server5
 Description: MonetDB database server version 5
  MonetDB is a database management system that is developed from a
  main-memory perspective with use of a fully decomposed storage model,
@@ -224,31 +203,6 @@ Description: MonetDB database server version 5
  package if you want to work using the MAL language, or if you want to
  use the SQL frontend (in which case you need libmonetdb5-sql2 as
  well).
-
-Package: libmonetdb5-server5
-Section: libs
-Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libmonetdb1, libmonetdb-client1
-Description: MonetDB database server version 5, libraries
- MonetDB is a database management system that is developed from a
- main-memory perspective with use of a fully decomposed storage model,
- automatic index management, extensibility of data types and search
- accelerators, SQL- and XML- frontends.
- .
- This package contains the shared libraries used by the MonetDB5
- server component.
-
-Package: libmonetdb5-server-dev
-Section: libdevel
-Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libmonetdb-dev, libmonetdb-client-dev, libmonetdb5-server5
-Description: MonetDB database server version 5, development libraries
- MonetDB is a database management system that is developed from a
- main-memory perspective with use of a fully decomposed storage model,
- automatic index management, extensibility of data types and search
- accelerators, SQL- and XML- frontends.
- .
- This package contains the files needed to develop with MonetDB5.
 
 Package: monetdb-xquery
 Architecture: any
@@ -261,22 +215,10 @@ Description: database system for high-performance applications, xquery frontend
  .
  This package contains the XQuery frontend.
 
-Package: libmonetdb4-xquery0
-Section: libs
-Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libmonetdb1, libmonetdb4-server4
-Description: MonetDB xquery support for MonetDB4-server
- MonetDB is a database management system that is developed from a
- main-memory perspective with use of a fully decomposed storage model,
- automatic index management, extensibility of data types and search
- accelerators, SQL- and XML- frontends.
- .
- This package contains the XQuery frontend for monetdb4.
-
 Package: libpf-ferry0
 Section: libs
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libmonetdb1, libmonetdb4-server4
+Depends: ${shlibs:Depends}, ${misc:Depends}, libmonetdb1, monetdb4-server
 Description: MonetDB xquery support for MonetDB4-server
  MonetDB is a database management system that is developed from a
  main-memory perspective with use of a fully decomposed storage model,
@@ -284,6 +226,20 @@ Description: MonetDB xquery support for MonetDB4-server
  accelerators, SQL- and XML- frontends.
  .
  This package contains the pf_ferry library.
+
+Package: libpf-ferry-dev
+Section: libs
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}, libmonetdb1, monetdb4-server
+Conflicts: libmonetdb4-xquery0
+Description: MonetDB xquery support for MonetDB4-server
+ MonetDB is a database management system that is developed from a
+ main-memory perspective with use of a fully decomposed storage model,
+ automatic index management, extensibility of data types and search
+ accelerators, SQL- and XML- frontends.
+ .
+ This package contains the files needed to develop with the
+ libpf-ferry0 package.
 
 Package: libmonetdb4-xquery-dev
 Section: libs
@@ -312,7 +268,8 @@ Description: MonetDB SQL support for monetdb5
 Package: libmonetdb5-sql2
 Section: libs
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, monetdb5-server, libmonetdb5-server5
+Depends: ${shlibs:Depends}, ${misc:Depends}, monetdb5-server
+Conflicts: libmonetdb5-sql-dev
 Description: MonetDB SQL libraries for monetdb5-server
  MonetDB is a database management system that is developed from a
  main-memory perspective with use of a fully decomposed storage model,
@@ -320,18 +277,6 @@ Description: MonetDB SQL libraries for monetdb5-server
  accelerators, SQL- and XML- frontends.
  .
  This package contains the SQL frontend for MonetDB5.
-
-Package: libmonetdb5-sql-dev
-Section: libdevel
-Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libmonetdb5-sql2, libmonetdb5-server-dev
-Description: MonetDB SQL header files for monetdb5
- MonetDB is a database management system that is developed from a
- main-memory perspective with use of a fully decomposed storage model,
- automatic index management, extensibility of data types and search
- accelerators, SQL- and XML- frontends.
- .
- This package contains the files needed to develop with monetdb5-sql.
 
 Package: monetdb-testing
 Architecture: any
@@ -345,4 +290,17 @@ Description: database system for high-performance applications, libraries
  This package contains the programs and files needed for testing the
  MonetDB packages.  You probably don't need this, unless you are a
  developer.
+
+Package: monetdb-testing-python
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}, python, libmonetdb1, libmonetdb-dev
+Description: database system for high-performance applications, libraries
+ MonetDB is a database management system that is developed from a
+ main-memory perspective with use of a fully decomposed storage model,
+ automatic index management, extensibility of data types and search
+ accelerators, SQL- and XML- frontends.
+ .
+ This package contains the Python programs and files needed for
+ testing the MonetDB packages.  You probably don't need this, unless
+ you are a developer.
 
