--- a/sql/backends/monet5/Makefile.ag
+++ b/sql/backends/monet5/Makefile.ag
@@ -15,7 +15,7 @@
 # Copyright August 2008-2011 MonetDB B.V.
 # All Rights Reserved.
 
-SUBDIRS = NOT_WIN32?merovingian NOT_WIN32?vaults
+SUBDIRS = NOT_WIN32?vaults
 
 # force sql.o to not depend on .../rdf/rdf.h since it only optionally created
 RDF_INC = -I../../../monetdb5/extras/rdf
