--- a/tools/Makefile.ag
+++ b/tools/Makefile.ag
@@ -15,17 +15,4 @@
 # Copyright August 2008-2011 MonetDB B.V.
 # All Rights Reserved.
 
-SUBDIRS = buildtools common clients gdk \
-	HAVE_MONETDB4?monetdb4 \
-	HAVE_MONETDB5?monetdb5 \
-	HAVE_SQL?sql \
-	HAVE_GEOM?geom \
-	HAVE_PATHFINDER?pathfinder \
-	tools \
-	HAVE_JAVA?java \
-	HAVE_TESTING?testing \
-
-EXTRA_DIST = bootstrap configure configure.ac configure.ag \
-			 MonetDB.spec rpm.mk.in COPYING README license.txt HowToStart.rst
-
-EXTRA_DIST_DIR = NT debian template
+SUBDIRS = HAVE_MONETDB5?mserver HAVE_MONETDB5?merovingian
