--- a/tools/merovingian/client/Makefile.ag
+++ b/tools/merovingian/client/Makefile.ag
@@ -15,17 +15,26 @@
 # Copyright August 2008-2011 MonetDB B.V.
 # All Rights Reserved.
 
-SUBDIRS = buildtools common clients gdk \
-	HAVE_MONETDB4?monetdb4 \
-	HAVE_MONETDB5?monetdb5 \
-	HAVE_SQL?sql \
-	HAVE_GEOM?geom \
-	HAVE_PATHFINDER?pathfinder \
-	tools \
-	HAVE_JAVA?java \
-	HAVE_TESTING?testing \
+man_MANS = monetdb.1
 
-EXTRA_DIST = bootstrap configure configure.ac configure.ag \
-			 MonetDB.spec rpm.mk.in COPYING README license.txt HowToStart.rst
+# MONETDB5: Sabaoth
+# COMMON:   stream
+INCLUDES = ../../../monetdb5/misc \
+		   ../../../common/stream \
+		   ../../../common/utils \
+		   ../utils
 
-EXTRA_DIST_DIR = NT debian template
+EXTRA_DIST = $(man_MANS)
+
+bin_monetdb = {
+	# hack: include monetdb.1.in here to get it expanded
+	SOURCES = monetdb.c monetdb.1.in
+	LIBS = ../utils/libmeroutil \
+		   ../../../monetdb5/misc/libsabaoth \
+		   ../../../common/stream/libstream \
+		   ../../../common/utils/libmutils \
+		   $(UUID_LIBS) \
+		   $(curl_LIBS) \
+		   $(SOCKET_LIBS) \
+		   $(MALLOC_LIBS)
+}
