--- a/sql/RunMtest.in
+++ b/sql/RunMtest.in
@@ -49,7 +49,7 @@ done
 cfg="${buildbase}/monetdb5/misc/monetdb5.conf"
 
 # enhance various paths to find our stuff
-binpath="${builddir}/backends/monet5:${buildbase}/monetdb5/tools:${buildbase}/clients/mapiclient:${buildbase}/testing"
+binpath="${builddir}/backends/monet5:${buildbase}/tools/mserver:${buildbase}/clients/mapiclient:${buildbase}/testing"
 libpath="${MOD_PATH}:${builddir}/server/.libs"
 
 PATH="${binpath}:$PATH"
