--- a/template/RunMtest.in
+++ b/template/RunMtest.in
@@ -51,6 +51,7 @@ do
 	MOD_PATH="${MOD_PATH}${buildbase}/monetdb4/$d/.libs:${buildbase}/monetdb4/$d:"
 done
 MOD_PATH="${MOD_PATH}${srcdir}/../monetdb4/scripts/tools"
+PATH="${buildbase}/monetdb4/tools:$PATH"
 cfg="${buildbase}/monetdb4/conf/MonetDB.conf"   
 ;;
 5)
@@ -62,13 +63,14 @@ do
 	mkdir -p ${buildbase}/monetdb5/$d/autoload
 	cp -f ${srcdir}/../monetdb5/$d/[0-9][0-9]_*.mal ${buildbase}/monetdb5/$d/autoload/ 2>/dev/null
 done
+PATH="${buildbase}/tools/mserver:$PATH"
 cfg="${buildbase}/monetdb5/misc/monetdb5.conf"
 ;;
 esac
 
 # enhance various paths to find our stuff
 libpath="${MOD_PATH}"
-PATH="${buildbase}/monetdb$V/tools:${buildbase}/clients/mapiclient:${buildbase}/testing:$PATH"
+PATH="${buildbase}/clients/mapiclient:${buildbase}/testing:$PATH"
 export PATH
 
 PYTHONPATH="${buildbase}/testing:${srcdir}/../testing:${PYTHONPATH}"
